--- a/wix.css
+++ b/wix.css
@@ -7,6 +7,7 @@
 body{
     margin:0;
     padding:0;
+    font-family: var(--wix-font-stack);
 }
 
 .header{
@@ -64,7 +65,7 @@ body{
     display: flex;
     margin: 10px;
 
-}xbold
+}
 input ::placeholder{
     color: black;
     font-size: large;
@@ -145,8 +146,67 @@ li {
     border-color: black;
     border: solid 1px;
     font-family: var(--wix-font-stack);
+    margin-bottom: 60px;
 }
+
 .show-more-btn > i {
     margin:0px;
     color: black;
 }
+.show-more-btn >i:hover{
+    color:white;
+}
+.bottom-grid-container{
+    background-color:rgb(239, 241, 242);
+
+}
+.bottom-grid-container > h2{
+    text-align: center;
+    font-size:56px;
+    font-weight: 700;
+    margin:0;
+    padding: 30px;
+}
+.ul-grid-container{
+    display:grid;
+    grid-template-rows: repeat(4,120px);
+    grid-template-columns: repeat(2,560px);
+    text-align:center;
+    margin:auto;
+    margin: top 50px;
+    list-style-type: none;
+    background-color:rgb(239, 241, 242);
+    justify-content:center;
+    grid-column-gap: 50px;
+    grid-gap: 30px;
+    padding:30px;
+
+}
+.ul-grid-container >li{
+    background-color:white;
+    border-radius: 5px;
+    direction:ltr;
+    text-align:left;
+    display: flex;
+    flex-direction:column;
+}
+.ul-grid-container >li >div{
+    display: flex;
+    flex-direction:row;
+    justify-content:space-between;
+    padding-right: 30px;
+}
+.ul-grid-container >li>h1{
+    font-size: 12px;
+    font-weight: 400;
+
+}
+.ul-grid-container > li > div>p{
+    font-size:20px;
+    font-weight: 400;
+    
+}
+.ul-grid-container > li > i{
+    display: inline;
+}
+
