--- a/wix.css
+++ b/wix.css
@@ -10,11 +10,13 @@ body{
     font-family: var(--wix-font-stack);
 }
 
+
+
 .header{
     background-color: black;
     justify-content: center;
     align-items: center;
-    padding:40px;
+    padding:70px;
 }
 .main-titles{
     font-family: var(--wix-font-stack);
@@ -51,25 +53,52 @@ body{
     border-radius: 40px;
     padding-right: 23px;
     padding-left: 57px;
-    display: block;
     margin-right: auto;
     margin-left: auto;
     font-size:large;
     color:black;
 }
+.one-edge-shadow {
+	-webkit-box-shadow: 0 8px 6px -6px black;
+	   -moz-box-shadow: 0 8px 6px -6px black;
+	        box-shadow: 0 8px 6px -6px black;
+}
 .sticky-header{
-    position: sticky;
+    margin:0;
+    padding:0;
+    overflow: hidden;
+    background-color:white;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
     align-items: center;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: space-between;
     display: flex;
-    margin: 10px;
+    height: 70px;
 
+}
+.nav{
+    display: flex;
+    justify-content: space-around;
 }
 input ::placeholder{
     color: black;
     font-size: large;
 
+}
+.profile{
+    margin-right: 50px;
+    background-color:white;
+    border-radius: 40px;
+    height:45px;
+    border:0px;
+}
+.profile > i{
+    
+}
+.profile:hover{
+    cursor: pointer;
 }
 .logo-img{
     width:90px;
@@ -156,6 +185,11 @@ li {
 .show-more-btn >i:hover{
     color:white;
 }
+.show-more-btn:hover{
+    background-color:black;
+    color:white;
+    cursor: pointer;
+}
 .bottom-grid-container{
     background-color:rgb(239, 241, 242);
 
@@ -209,4 +243,12 @@ li {
 .ul-grid-container > li > i{
     display: inline;
 }
-
+.footer-content{
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+.footer-content>li>img{
+    width:70px;
+    padding:0;
+}
